Added css styling to elements

--- a/index.html
+++ b/index.html
@@ -5,23 +5,32 @@
   </head>
   <body>
     <div>
-      <a href="./all-time.html">Top 5 NBA Players of All-Time</a>
+        <h1 class="shadow" align="center";>INSEOP's TOPS</h1>
+        <h3 align="center"> Hover to view Inseops Top 5s!</h3>
+    <div class="div1 best">
+      <a href="./all-time.html"> NBA Players of All-Time</a>
     </div>
     <br />
-    <div>
-      <a href="./shooters.html">Top 5 3-Point Shooters</a>
+
+    <div class="div2">
+      <a href="./shooters.html"> 3-Point Shooters</a>
+    </div>
+
+    <br />
+
+    <div class="div3">
+      <a href="./nicknames.html"> Best Nicknames </a>
+    </div>
+
+    <br />
+
+    <div class="div4">
+      <a href="./dunkers.html"> Dunkers</a>
     </div>
     <br />
-    <div>
-      <a href="./nicknames.html">Top 5 Best Nicknames </a>
-    </div>
-    <br />
-    <div>
-      <a href="./dunkers.html">Top 5 Dunkers</a>
-    </div>
-    <br />
-    <div>
-      <a href="./paid.html">Top 5 Highest paid players 2018-2019</a>
+
+    <div class="div5">
+      <a href="./paid.html">Highest paid players 2018-2019</a>
     </div>
   </body>
 </html>
