--- a/all-time.html
+++ b/all-time.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="all-time.css" />
+    <link rel="stylesheet" href="paid.css" />
   </head>
   <body>
     <ul>
