--- a/nicknames.html
+++ b/nicknames.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="nicknames.css" />
+    <link rel="stylesheet" href="paid.css" />
   </head>
 
   <body>
