Added more dope CSS

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   </head>
   <body>
     <div>
-        <h1 class="shadow" align="center";>INSEOP's TOPS</h1>
-        <h3 align="center"> Hover to view Inseops Top 5s!</h3>
+        <h1 class="shadow" align="center";>IN SEOP's TOPS</h1>
+        <!-- <h3 align="center"> Hover to view Inseops Top 5s!</h3> -->
     <div class="div1 best">
       <a href="./all-time.html"> NBA Players of All-Time</a>
     </div>
