Done playing forgot to submit on time

--- a/all-time.html
+++ b/all-time.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="paid.css" />
   </head>
   <body>
-          <div class="border">TOP FIVE </div>
+          <div class="border"><div>TOP FIVE</div> </div>
 
     <ul>
       ALL TIME BEST
